--- a/src/main/resources/afficherCompetition.fxml
+++ b/src/main/resources/afficherCompetition.fxml
@@ -3,15 +3,17 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.afficherCompetition">
    <children>
-      <Label fx:id="libelleLabel" layoutX="97.0" layoutY="86.0" text="Label" />
-      <Label fx:id="dateDebutLabel" layoutX="97.0" layoutY="153.0" text="Label" />
-      <Label fx:id="dateFinLabel" layoutX="97.0" layoutY="220.0" text="Label" />
-      <Label fx:id="nbrMaxLabel" layoutX="97.0" layoutY="286.0" text="Label" />
+      <Label fx:id="libelleLabel" layoutX="211.0" layoutY="105.0" text="Label" />
+      <Label fx:id="dateDebutLabel" layoutX="214.0" layoutY="140.0" text="Label" />
+      <Label fx:id="dateFinLabel" layoutX="214.0" layoutY="173.0" text="Label" />
+      <Label fx:id="tarifLabel" layoutX="214.0" layoutY="210.0" text="Label" />
       <Button fx:id="supprimer" layoutX="339.0" layoutY="320.0" mnemonicParsing="false" onAction="#handleSupprimerButtonClick" text="Supprimer" />
       <Button fx:id="modifierC" layoutX="253.0" layoutY="320.0" mnemonicParsing="false" onAction="#handleModifierButtonClick" text="modifier" />
       <Button fx:id="retour" layoutX="176.0" layoutY="320.0" mnemonicParsing="false"  text="retour" />
+      <VBox prefHeight="400.0" prefWidth="173.0" />
    </children>
 </AnchorPane>
