--- a/src/main/resources/ajouterCompetition.fxml
+++ b/src/main/resources/ajouterCompetition.fxml
@@ -13,7 +13,7 @@
 <AnchorPane prefHeight="500.0" prefWidth="800.0" style="-fx-background-color: #b9e1d7;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.ajouterCompetition">
    <children>
       <TextField fx:id="libelle" layoutX="276.0" layoutY="78.0" prefHeight="26.0" prefWidth="150.0" promptText="libelle" />
-      <TextField fx:id="nbrMaxMembres" layoutX="277.0" layoutY="190.0" prefHeight="26.0" prefWidth="134.0" promptText="nombre max membres" />
+      <TextField fx:id="tarifTxt" layoutX="277.0" layoutY="190.0" prefHeight="26.0" prefWidth="134.0" promptText="tarif en dinnars" />
       <Label layoutX="272.0" layoutY="21.0" prefHeight="35.0" prefWidth="216.0" text="Ajouter compétition" textFill="#181818">
          <font>
             <Font size="24.0" />
@@ -39,7 +39,7 @@
          </children>
       </VBox>
       <Button layoutX="288.0" layoutY="272.0" mnemonicParsing="false" onAction="#ajouterCompetition" text="Ajouter" />
-      <DatePicker fx:id="dateDebut" layoutX="277.0" layoutY="115.0" />
-      <DatePicker fx:id="dateFin" layoutX="277.0" layoutY="152.0" />
+      <DatePicker fx:id="dateDebut" layoutX="277.0" layoutY="115.0" promptText="date de début" />
+      <DatePicker fx:id="dateFin" layoutX="277.0" layoutY="152.0" promptText="date de fin" />
    </children>
 </AnchorPane>
