--- a/src/main/resources/viewFood.fxml
+++ b/src/main/resources/viewFood.fxml
@@ -3,8 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -130,20 +129,6 @@
           <RowConstraints maxHeight="261.3999847412109" minHeight="10.0" prefHeight="261.3999847412109" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <TableView fx:id="tableF" prefHeight="262.0" prefWidth="606.0" stylesheets="@assets/css/fullpackstyling.css" GridPane.rowIndex="1">
-               <columns>
-                  <TableColumn fx:id="nameF" prefWidth="75.0" text="Name" />
-                  <TableColumn fx:id="calF" prefWidth="75.0" text="Calories" />
-                  <TableColumn fx:id="protF" prefWidth="75.0" text="Protein" />
-                  <TableColumn fx:id="carbsF" prefWidth="75.0" text="carbohydrates" />
-                  <TableColumn fx:id="fatF" prefWidth="75.0" text="fat" />
-                  <TableColumn fx:id="sizeF" prefWidth="75.0" text="serving size" />
-                  <TableColumn fx:id="unitF" prefWidth="75.0" text="serving unit" />
-               </columns>
-               <columnResizePolicy>
-                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-               </columnResizePolicy>
-            </TableView>
             <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
                <children>
                   <TextField fx:id="searchTF" onKeyReleased="#searchFoods" prefHeight="26.0" prefWidth="438.0" />                  <Button graphicTextGap="10.0" mnemonicParsing="false" styleClass="button4" stylesheets="@assets/css/fullpackstyling.css" text="Search" textFill="WHITE">
@@ -157,6 +142,7 @@
                   </Button>
                </children>
             </HBox>
+            <ListView fx:id="listF" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1" />
          </children>
       </GridPane>
       <Pane layoutX="250.0" layoutY="95.0" prefHeight="118.0" prefWidth="633.0" style="-fx-background-color: #7156DD;" AnchorPane.leftAnchor="250.39999999999998" AnchorPane.rightAnchor="-7.600000000000023">
