--- a/src/main/resources/AfficherEx.fxml
+++ b/src/main/resources/AfficherEx.fxml
@@ -1,69 +1,103 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.AfficherEx">
-    <children>
-        <VBox layoutX="42.0" layoutY="2.0" prefHeight="600.0" prefWidth="219.0" style="-fx-background-color: #3F2B63;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="861.0" AnchorPane.topAnchor="0.0">
-            <children>
-                <ImageView fitHeight="192.0" fitWidth="189.0" pickOnBounds="true" preserveRatio="true">
-                    <image>
-                        <Image url="@img/iron_core.png" />
-                    </image>
-                    <VBox.margin>
-                        <Insets left="17.0" />
-                    </VBox.margin>
-                </ImageView>
-                <Pane prefHeight="100.0" prefWidth="224.0">
-                    <children>
-                        <ComboBox fx:id="muscleCibleComboBox" layoutX="48.0" layoutY="37.0" prefHeight="29.0" prefWidth="135.0">
-                            <padding>
-                                <Insets bottom="2.0" left="10.0" top="2.0" />
-                            </padding>
-                        </ComboBox>
-                    </children>
-                </Pane>
-            </children>
-            <padding>
-                <Insets bottom="5.0" left="5.0" right="3.0" />
-            </padding>
-        </VBox>
-        <TableView fx:id="tableView" layoutX="252.0" layoutY="78.0" prefHeight="547.0" prefWidth="703.0">
-            <columns>
-                <TableColumn fx:id="nomEx" prefWidth="130.0" text="NOM" />
-                <TableColumn fx:id="descriptionEx" prefWidth="130.0" text="DESCRIPTION" />
-                <TableColumn fx:id="muscleEX" prefWidth="130.0" text="MUSCLE" />
-                <TableColumn fx:id="imageEx" minWidth="2.0" prefWidth="130.0" text="IMAGE" />
-                <TableColumn fx:id="actionCol" prefWidth="145.0" text="Action">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="635.0" prefWidth="876.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.AfficherEx">
+   <children>
+      <VBox layoutY="-3.0" prefHeight="642.0" prefWidth="250.0" style="-fx-background-color: #3F2B63;" AnchorPane.bottomAnchor="-4.0" AnchorPane.topAnchor="-3.0">
+         <children>
+            <Pane prefHeight="200.0" prefWidth="200.0">
+               <children>
+                  <ImageView fitHeight="183.0" fitWidth="208.0" layoutX="34.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@assets/icons/iron_core.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </Pane>
+            <Button alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#AjouterExercice" prefHeight="50.0" prefWidth="291.0" styleClass="button2" stylesheets="@assets/css/fullpackstyling.css" text="Ajouter Exercice" textFill="WHITE">
+               <graphic>
+                  <ImageView fitHeight="25.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@assets/icons/add.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Button>
+            <Button alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#AfficherExercice" prefHeight="50.0" prefWidth="291.0" styleClass="button2" stylesheets="@assets/css/fullpackstyling.css" text="Visualiser Exercice" textFill="WHITE">
+               <graphic>
+                  <ImageView fitHeight="25.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@assets/icons/search.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Button>
+            <Button alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#AfficherPlan" prefHeight="50.0" prefWidth="291.0" styleClass="button2" stylesheets="@assets/css/fullpackstyling.css" text="Plans" textFill="WHITE">
+               <graphic>
+                  <ImageView fitHeight="25.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@assets/icons/recipe.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Button>
+         </children>
+      </VBox>
+      <GridPane layoutX="276.0" layoutY="37.0" prefHeight="535.0" prefWidth="569.0" AnchorPane.leftAnchor="276.0" AnchorPane.rightAnchor="31.0">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints maxHeight="244.0" minHeight="10.0" prefHeight="63.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="286.0" minHeight="0.0" prefHeight="48.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="423.0" minHeight="10.0" prefHeight="416.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+         <children>
+            <TextField fx:id="RechercherTF" onKeyReleased="#searchExercice" prefHeight="37.0" prefWidth="569.0" styleClass="search-field" stylesheets="@assets/css/fullpackstyling.css">
+               <padding>
+                  <Insets right="5.0" />
+               </padding>
+            </TextField>
+            <ImageView fitHeight="37.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@img/search_8767612.png" /> <!-- Assurez-vous que le chemin est correct -->
+               </image>
+            </ImageView>
+            <ListView fx:id="listE" prefHeight="418.0" prefWidth="409.0" GridPane.rowIndex="2" />
+         </children>
+      </GridPane>
 
-                    <!-- Pas besoin de cellValueFactory pour les boutons d'action -->
-                </TableColumn>
+   </children>
 
-            </columns>
-        </TableView>
-        <StackPane layoutX="274.0" layoutY="2.0" prefHeight="59.0" prefWidth="455.0" />
-        <TextField fx:id="RechercherTF" layoutX="370.0" layoutY="30.0" prefHeight="25.0" prefWidth="310.0" styleClass="search-field" stylesheets="@style.css">
-            <padding>
-                <Insets right="5.0" />
-            </padding>
-        </TextField>
-        <ImageView fitHeight="35.0" fitWidth="45.0" layoutX="376.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-                <Image url="@img/search_8767612.png" /> <!-- Assurez-vous que le chemin est correct -->
-            </image>
-        </ImageView>
-        <Label layoutX="267.0" layoutY="27.0" prefHeight="33.0" prefWidth="81.0" text="Seach exercice" />
-
-    </children>
 </AnchorPane>
