--- a/src/main/resources/AjouterPlan.fxml
+++ b/src/main/resources/AjouterPlan.fxml
@@ -1,30 +1,116 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox fx:id="root" alignment="CENTER" prefHeight="281.0" prefWidth="948.0" spacing="20" stylesheets="@style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.AjouterPlan">
-    <Label prefHeight="18.0" prefWidth="247.0" styleClass="heading" text="Ajouter un Nouveau Plan d'Exercice" />
-    <HBox spacing="15">
-        <VBox spacing="10">
-            <Label text="Nom du Plan:" />
-            <TextField fx:id="nomPlanTextField" promptText="Entrez le nom du plan" />
-            <Label text="Description du Plan:" />
-            <TextArea fx:id="descriptionPlanTextArea" prefHeight="100" promptText="Entrez une description" />
-            <Button onAction="#handleUploadImage" text="Choisir Image" />
-            <Button fx:id="ajouterPlanButton" onAction="#handleAddPlan" styleClass="primary-button" text="Ajouter Plan" />
-        </VBox>
-        <VBox spacing="10">
-            <Label text="Sélectionnez les Exercices:" />
-            <ListView fx:id="exercicesListView" prefHeight="186.0" prefWidth="402.0" />
-        </VBox>
-        <ImageView fx:id="imageView" fitHeight="200" fitWidth="200" preserveRatio="true" />
-    </HBox>
-    <Button layoutX="608.0" layoutY="14.0" mnemonicParsing="false" onAction="#navigate" prefHeight="24.0" prefWidth="165.0" styleClass="buttonn" stylesheets="style.css" text="Retourner vers la liste" />
-</VBox>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="635.0" prefWidth="876.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.AjouterPlan">
+    <children>
+      <GridPane layoutX="264.0" layoutY="41.0" prefHeight="283.0" prefWidth="581.0" AnchorPane.leftAnchor="264.0" AnchorPane.rightAnchor="31.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="50.33332824707031" minHeight="10.0" prefHeight="30.333335876464844" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="68.66666412353516" minHeight="10.0" prefHeight="68.66666412353516" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="127.0" minHeight="10.0" prefHeight="18.999984741210938" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="151.00001525878906" minHeight="10.0" prefHeight="151.00001525878906" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+         <TextField fx:id="nomPlanTextField" promptText="Entrez le nom du plan" />
+         <TextArea fx:id="descriptionPlanTextArea" prefHeight="38.0" prefWidth="581.0" promptText="Entrez une description" GridPane.rowIndex="1" />
+         <ListView fx:id="exercicesListView" prefHeight="186.0" prefWidth="402.0" GridPane.rowIndex="3" />
+         <Label text="Sélectionnez les Exercices:" GridPane.rowIndex="2" />
+         </children>
+      </GridPane>
+      <GridPane layoutX="282.0" layoutY="348.0" prefHeight="265.0" prefWidth="572.0" AnchorPane.leftAnchor="282.0" AnchorPane.rightAnchor="22.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="73.33334350585938" minHeight="10.0" prefHeight="26.666656494140625" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="183.33334350585938" minHeight="10.0" prefHeight="183.33334350585938" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="120.33334350585938" minHeight="1.66668701171875" prefHeight="25.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+         <Button onAction="#handleUploadImage" prefHeight="37.0" prefWidth="149.0" styleClass="primary-button" stylesheets="@assets/css/fullpackstyling.css" text="Choisir Image" />
+        <ImageView fx:id="imageView" fitHeight="176.0" fitWidth="197.0" preserveRatio="true" GridPane.rowIndex="1" />
+         <Button fx:id="ajouterPlanButton" onAction="#handleAddPlan" prefHeight="37.0" prefWidth="154.0" styleClass="primary-button" stylesheets="@assets/css/fullpackstyling.css" text="Ajouter Plan" GridPane.rowIndex="2">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Button>
+         </children>
+      </GridPane>
+      <VBox layoutY="-3.0" prefHeight="642.0" prefWidth="250.0" style="-fx-background-color: #3F2B63;" AnchorPane.bottomAnchor="-4.0" AnchorPane.topAnchor="-3.0">
+         <children>
+            <Pane prefHeight="200.0" prefWidth="200.0">
+               <children>
+                  <ImageView fitHeight="183.0" fitWidth="208.0" layoutX="34.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@assets/icons/iron_core.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </Pane>
+            <Button alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#AjouterPlan" prefHeight="50.0" prefWidth="291.0" styleClass="button2" stylesheets="@assets/css/fullpackstyling.css" text="Ajouter Plan" textFill="WHITE">
+               <graphic>
+                  <ImageView fitHeight="25.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@assets/icons/add.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Button>
+            <Button alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#AfficherPlan" prefHeight="50.0" prefWidth="291.0" styleClass="button2" stylesheets="@assets/css/fullpackstyling.css" text="Visualiser Plan" textFill="WHITE">
+               <graphic>
+                  <ImageView fitHeight="25.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@assets/icons/search.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Button>
+            <Button alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#AfficherExercice" prefHeight="50.0" prefWidth="291.0" styleClass="button2" stylesheets="@assets/css/fullpackstyling.css" text="Exercices" textFill="WHITE">
+               <graphic>
+                  <ImageView fitHeight="25.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@assets/icons/recipe.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Button>
+         </children>
+      </VBox>
+    </children>
+</AnchorPane>
